# Prime_image_generator

./: Cargo.toml
src/: fastmod.rs  main.rs
